plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.inboxintelligence'
version = '0.0.1-SNAPSHOT'
description = 'Ingester for InboxIntelligence'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	all {
		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
	}
}

repositories {
	mavenLocal()
	maven {
		name = "GitHubPackages"
		url = uri("https://maven.pkg.github.com/inbox-intelligence/persistence-lib")
		credentials {
			username = System.getenv("GITHUB_USERNAME")
			password = System.getenv("GITHUB_TOKEN")
		}
	}
	mavenCentral()
}

dependencies {

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'com.inboxintelligence:persistence-lib:0.0.1-SNAPSHOT'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

	implementation platform("com.google.cloud:libraries-bom:26.47.0")
	implementation "com.google.apis:google-api-services-gmail:v1-rev20230925-2.0.0"
	implementation "com.google.cloud:google-cloud-pubsub"

	runtimeOnly 'org.postgresql:postgresql'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	implementation 'org.apache.commons:commons-collections4:4.5.0'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'

	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
